fix| time bar disappearing in dark mode

--- a/styles/darkTheme.css
+++ b/styles/darkTheme.css
@@ -28,7 +28,7 @@ body.dark .main-content {
 }
 
 body.dark .time-bar {
-  border: 0.4rem solid var(--cards-color-bg);
+  border: 0.4rem solid var(--cards-color-bg-dark);
   background-color: transparent;
   transition: all 1s ease;
 }
